# conwaysGameOfLife

./: CMakeLists.txt  README.md  generation.cpp  generation.h  main.cpp
